test/invalidwiki/Страница без аттачей/__page.opt
[General]
type = text
datetime = 2012-09-11 21:20:44.233000

